@@ -18,6 +18,10 @@ trunk of the CVS tree.
 Version 1.3.6  (not yet released)
 =============
 
+6/19/2001: cheetah (william fulton)
+	   * [Java] Bug fix for SF bug #211144. This fix is a workaround 
+	     until fixed in the core.
+
 6/19/2001: mkoeppe
 	   * [Guile]: Portability fixes for use with the Sun Forte
 	   compilers. 
